--- a/data_preprocessingAidan.ipynb
+++ b/data_preprocessingAidan.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 1,
       "metadata": {
         "id": "IovT3H3Ts0qZ"
       },
@@ -14,34 +14,10 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "metadata": {
-        "id": "-yREXjf7wA4k",
-        "outputId": "e78f6a89-9545-4618-c4f1-899aa54ac1ce",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 4,
       "metadata": {
         "id": "FqceX2oTs0qa",
-        "outputId": "4459dd8b-9409-43fa-f82b-8019ef09687e",
+        "outputId": "56dccb36-4526-419c-a593-5cca2e703ea9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 496
@@ -121,7 +97,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-aa3eefff-a0cd-43ee-b71f-5683ee579582\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-c087d160-270f-4be0-97ce-eb04d4e111c4\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -435,7 +411,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-aa3eefff-a0cd-43ee-b71f-5683ee579582')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c087d160-270f-4be0-97ce-eb04d4e111c4')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -487,12 +463,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-aa3eefff-a0cd-43ee-b71f-5683ee579582 button.colab-df-convert');\n",
+              "        document.querySelector('#df-c087d160-270f-4be0-97ce-eb04d4e111c4 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-aa3eefff-a0cd-43ee-b71f-5683ee579582');\n",
+              "        const element = document.querySelector('#df-c087d160-270f-4be0-97ce-eb04d4e111c4');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -512,8 +488,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-4f61a397-d094-47c0-b994-ca44894f7825\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4f61a397-d094-47c0-b994-ca44894f7825')\"\n",
+              "<div id=\"df-6631f1f1-bf40-4c85-8b51-99196a7e7006\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6631f1f1-bf40-4c85-8b51-99196a7e7006')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -632,7 +608,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-4f61a397-d094-47c0-b994-ca44894f7825 button');\n",
+              "        document.querySelector('#df-6631f1f1-bf40-4c85-8b51-99196a7e7006 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -643,7 +619,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 4
         }
       ],
       "source": [
@@ -659,13 +635,13 @@
       ],
       "metadata": {
         "id": "hgVQ6wqCDKLX",
-        "outputId": "a70e9ceb-9b2e-42ad-a97b-b4630208417b",
+        "outputId": "c9b46955-99af-4222-eafc-9100cd96e41d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 496
         }
       },
-      "execution_count": 22,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -740,7 +716,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-892fa70c-6834-4c50-9663-ed3894dbb4df\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-adcf9006-5dcf-4938-8e57-2e187dbd1065\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1054,7 +1030,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-892fa70c-6834-4c50-9663-ed3894dbb4df')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-adcf9006-5dcf-4938-8e57-2e187dbd1065')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1106,12 +1082,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-892fa70c-6834-4c50-9663-ed3894dbb4df button.colab-df-convert');\n",
+              "        document.querySelector('#df-adcf9006-5dcf-4938-8e57-2e187dbd1065 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-892fa70c-6834-4c50-9663-ed3894dbb4df');\n",
+              "        const element = document.querySelector('#df-adcf9006-5dcf-4938-8e57-2e187dbd1065');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1131,8 +1107,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-be553f10-b0ad-460d-838b-d33b2f638643\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-be553f10-b0ad-460d-838b-d33b2f638643')\"\n",
+              "<div id=\"df-95b74184-d052-4b7c-acb8-a0444b3d4c5b\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-95b74184-d052-4b7c-acb8-a0444b3d4c5b')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1251,7 +1227,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-be553f10-b0ad-460d-838b-d33b2f638643 button');\n",
+              "        document.querySelector('#df-95b74184-d052-4b7c-acb8-a0444b3d4c5b button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1262,7 +1238,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 5
         }
       ]
     },
@@ -1276,7 +1252,7 @@
       "metadata": {
         "id": "pGOxt03vJx8g"
       },
-      "execution_count": 23,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -1287,12 +1263,12 @@
       ],
       "metadata": {
         "id": "3GDUN6jSG24w",
-        "outputId": "8edebca4-147f-4ffe-ff56-c613f2fff1e4",
+        "outputId": "f590614d-66a3-4cd4-9cab-7245e218edf6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -1312,18 +1288,101 @@
       ],
       "metadata": {
         "id": "4jIEDrBpD-Qe",
-        "outputId": "f72afa2f-b4f9-4ab0-aa85-91e8545fda2a",
+        "outputId": "ebfb6eab-b9c0-4825-a084-b6544669e315",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "The number of people in this dataset with heart disease is 1508 while the number of people without it is 35571\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Lasso\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.linear_model import Lasso\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "\n",
+        "#Training/testing split\n",
+        "X = df.drop('CoronaryHeartDisease', axis=1)  # Adjust 'target_column' to your target variable\n",
+        "y = df['CoronaryHeartDisease']\n",
+        "\n",
+        "#80/20 split\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+      ],
+      "metadata": {
+        "id": "zp_kdGw9ChpO"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Feature Standardization\n",
+        "scaler = StandardScaler()\n",
+        "X_train = scaler.fit_transform(X_train)\n",
+        "X_test = scaler.transform(X_test)"
+      ],
+      "metadata": {
+        "id": "5J6e2OZmDFjI"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lassoModel = Lasso(0.01) #0.01 is the regularization strength\n",
+        "lassoModel.fit(X_train, y_train)\n",
+        "\n",
+        "y_pred = lassoModel.predict(X_test)"
+      ],
+      "metadata": {
+        "id": "Sf10DunlDP-Y"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Feature selection in Lasso\n",
+        "lassoCoef = pd.Series(lassoModel.coef_, index=X.columns)\n",
+        "selectedFeatures = lassoCoef[lassoCoef != 0]\n",
+        "print(f'The selected features are {selectedFeatures}')"
+      ],
+      "metadata": {
+        "id": "DnTpcnqgDw2r",
+        "outputId": "284eb3af-a850-42bd-8bf5-6880c6d4e65b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The selected features are Gender             -0.001251\n",
+            "Age                 0.032264\n",
+            "Platelet-count     -0.000484\n",
+            "Cholesterol        -0.010013\n",
+            "Creatinine          0.003356\n",
+            "Uric.Acid           0.002424\n",
+            "Diabetes           -0.004958\n",
+            "Blood-Rel-Stroke   -0.001403\n",
+            "dtype: float64\n"
           ]
         }
       ]
