--- a/data_preprocessing_Marc.ipynb
+++ b/data_preprocessing_Marc.ipynb
@@ -11,9 +11,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZXDzV9-rv3b-",
-        "outputId": "99d1b69e-7bd5-401c-bfe6-9ed015550077"
+        "outputId": "fcb217e7-9c37-4a8e-e86a-1c93cf15980e"
       },
-      "execution_count": 4,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 31,
       "metadata": {
         "id": "IovT3H3Ts0qZ"
       },
@@ -50,10 +50,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 32,
       "metadata": {
         "id": "FqceX2oTs0qa",
-        "outputId": "489e1f90-7245-46c4-a61e-3269a5d8b56a",
+        "outputId": "18e044d9-b93a-4e21-a8f5-d0fd773ff9d5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 495
@@ -133,7 +133,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1da766e2-f647-44fb-8dac-41e21cda8ee4\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-2e03d441-bd37-47be-84fe-682cb4538b17\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -447,7 +447,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1da766e2-f647-44fb-8dac-41e21cda8ee4')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2e03d441-bd37-47be-84fe-682cb4538b17')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -499,12 +499,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-1da766e2-f647-44fb-8dac-41e21cda8ee4 button.colab-df-convert');\n",
+              "        document.querySelector('#df-2e03d441-bd37-47be-84fe-682cb4538b17 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-1da766e2-f647-44fb-8dac-41e21cda8ee4');\n",
+              "        const element = document.querySelector('#df-2e03d441-bd37-47be-84fe-682cb4538b17');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -524,8 +524,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-f28b2b9b-5a05-457d-9d12-593839ed998f\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f28b2b9b-5a05-457d-9d12-593839ed998f')\"\n",
+              "<div id=\"df-7db798e7-a7b7-40d9-9cdd-0fd5d0533e77\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7db798e7-a7b7-40d9-9cdd-0fd5d0533e77')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -644,7 +644,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-f28b2b9b-5a05-457d-9d12-593839ed998f button');\n",
+              "        document.querySelector('#df-7db798e7-a7b7-40d9-9cdd-0fd5d0533e77 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -655,7 +655,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 32
         }
       ],
       "source": [
@@ -678,7 +678,7 @@
       "metadata": {
         "id": "seF8KR0VhYpQ"
       },
-      "execution_count": 6,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -691,7 +691,7 @@
       "metadata": {
         "id": "riRt39TkapPH"
       },
-      "execution_count": 7,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -705,9 +705,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WWTtkbP5ayxy",
-        "outputId": "bda65e85-69f6-4e38-ad9e-fe82be40399d"
+        "outputId": "112d85f2-bc12-41cd-8ae6-adf53d67a6a4"
       },
-      "execution_count": 8,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -730,9 +730,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nJABib5fa0kv",
-        "outputId": "da5c4898-a0bb-4d02-a713-0dbbedbb7f6e"
+        "outputId": "48153a3e-e07e-4dfb-fd9b-252e74128e35"
       },
-      "execution_count": 9,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -766,7 +766,7 @@
       "metadata": {
         "id": "-kTlXE0ja2ZW"
       },
-      "execution_count": 10,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -796,9 +796,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dr3C_9s_9tIT",
-        "outputId": "f0301a96-a355-4f71-f6a9-a86435035c86"
+        "outputId": "305a5372-706d-4376-a30c-7996bcbbfffd"
       },
-      "execution_count": 11,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -822,7 +822,7 @@
       "metadata": {
         "id": "ckizmO9xa5Z-"
       },
-      "execution_count": 12,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -847,16 +847,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ekC-1U1xa7Ze",
-        "outputId": "24c3f229-b5aa-4f56-cead-039f0ed045c3"
+        "outputId": "98df4476-9663-40f3-b1c2-f4669d1ab962"
       },
-      "execution_count": 13,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "The optimal alpha is 0.01\n",
-            "Accuracy: 0.8208955223880597\n"
+            "Accuracy: 0.7794361525704809\n"
           ]
         }
       ]
@@ -874,35 +874,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NaLpRXoSa9k0",
-        "outputId": "6c1778a6-b88c-4cd8-ba68-a66b9334df88"
+        "outputId": "6f89abfa-c080-472a-ec59-6487495a811c"
       },
-      "execution_count": 14,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "The selected features are \n",
-            "Gender                        -0.040119\n",
-            "Age                            0.236891\n",
-            "Systolic                      -0.001403\n",
-            "Body-Mass-Index                0.003990\n",
-            "White-Blood-Cells              0.005422\n",
-            "Platelet-count                -0.024994\n",
-            "Mean-Platelet-Vol              0.000356\n",
-            "Red-Cell-Distribution-Width    0.017596\n",
-            "ALP                            0.003279\n",
-            "Cholesterol                   -0.064647\n",
-            "Creatinine                     0.014877\n",
-            "Iron                          -0.003044\n",
-            "LDH                            0.018381\n",
-            "Uric.Acid                      0.006083\n",
-            "Triglycerides                  0.009378\n",
-            "HDL                           -0.022131\n",
-            "Moderate-work                 -0.007376\n",
-            "Diabetes                      -0.035021\n",
-            "Blood-Rel-Diabetes            -0.005868\n",
-            "Blood-Rel-Stroke              -0.044692\n",
+            "Gender                        -0.041112\n",
+            "Age                            0.237031\n",
+            "Diastolic                     -0.021316\n",
+            "Weight                         0.003043\n",
+            "White-Blood-Cells              0.005171\n",
+            "Basophils                     -0.015218\n",
+            "Platelet-count                -0.018876\n",
+            "Red-Cell-Distribution-Width    0.016148\n",
+            "ALP                            0.002674\n",
+            "Cholesterol                   -0.066583\n",
+            "Iron                          -0.007258\n",
+            "LDH                            0.024013\n",
+            "Phosphorus                     0.005968\n",
+            "Uric.Acid                      0.009586\n",
+            "Triglycerides                  0.024005\n",
+            "HDL                           -0.006516\n",
+            "Glycohemoglobin                0.029732\n",
+            "Diabetes                      -0.010621\n",
+            "Blood-Rel-Diabetes            -0.010476\n",
+            "Blood-Rel-Stroke              -0.042478\n",
             "dtype: float64\n"
           ]
         }
@@ -935,9 +935,9 @@
           "height": 478
         },
         "id": "yTpSUh4KdhI8",
-        "outputId": "988142ba-a81c-4b37-cf9f-8608ddfe78b0"
+        "outputId": "228bd800-42e1-4002-f48d-e3c1102445dc"
       },
-      "execution_count": 15,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1012,7 +1012,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-580db828-436f-4e8d-9065-ddbd7c3efd00\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-8b8dd25c-c49c-494c-9b44-17f245110800\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1326,7 +1326,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-580db828-436f-4e8d-9065-ddbd7c3efd00')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8b8dd25c-c49c-494c-9b44-17f245110800')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1378,12 +1378,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-580db828-436f-4e8d-9065-ddbd7c3efd00 button.colab-df-convert');\n",
+              "        document.querySelector('#df-8b8dd25c-c49c-494c-9b44-17f245110800 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-580db828-436f-4e8d-9065-ddbd7c3efd00');\n",
+              "        const element = document.querySelector('#df-8b8dd25c-c49c-494c-9b44-17f245110800');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1403,8 +1403,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-0ba39f72-4256-48b6-b7d9-79050f81ae16\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0ba39f72-4256-48b6-b7d9-79050f81ae16')\"\n",
+              "<div id=\"df-d1d7c7a7-4c4f-4c1c-bcd6-889fb0846c93\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d1d7c7a7-4c4f-4c1c-bcd6-889fb0846c93')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1523,7 +1523,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-0ba39f72-4256-48b6-b7d9-79050f81ae16 button');\n",
+              "        document.querySelector('#df-d1d7c7a7-4c4f-4c1c-bcd6-889fb0846c93 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1534,7 +1534,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 41
         }
       ]
     },
@@ -1564,9 +1564,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eOUfHvpSfG6u",
-        "outputId": "b6a9b25d-3fee-4571-bb19-ef696b6fef2e"
+        "outputId": "25984988-0780-4acc-f4d9-4cd2b065e3ae"
       },
-      "execution_count": 16,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -1590,7 +1590,7 @@
       "metadata": {
         "id": "qh3orSY2COTD"
       },
-      "execution_count": 17,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -1628,18 +1628,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MjIfUQhQhN6q",
-        "outputId": "594c75a7-9aef-4cea-a24a-11d26e9b84f9"
+        "outputId": "f87d91a4-a8d3-4561-8c51-f00029e604d5"
       },
-      "execution_count": 30,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy: 0.7860696517412935\n",
-            "Precision: 0.7476038338658147\n",
-            "Recall: 0.823943661971831\n",
-            "F1-Score: 0.7839195979899497\n"
+            "Accuracy: 0.8043117744610282\n",
+            "Precision: 0.7643312101910829\n",
+            "Recall: 0.8450704225352113\n",
+            "F1-Score: 0.802675585284281\n"
           ]
         }
       ]
@@ -1674,21 +1674,21 @@
       ],
       "metadata": {
         "id": "S1FGU9H4CaF1",
-        "outputId": "705474f4-a1df-4f0b-b786-defdb6ec436d",
+        "outputId": "73064e02-7341-4710-e3ac-ffbe4eef234b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy: 0.7412935323383084\n",
-            "Precision: 0.7519685039370079\n",
-            "Recall: 0.6725352112676056\n",
-            "F1-Score: 0.7100371747211897\n"
+            "Accuracy: 0.7396351575456053\n",
+            "Precision: 0.7529880478087649\n",
+            "Recall: 0.6654929577464789\n",
+            "F1-Score: 0.7065420560747664\n"
           ]
         }
       ]
@@ -1729,21 +1729,21 @@
       ],
       "metadata": {
         "id": "_jVbV-LmE3WJ",
-        "outputId": "9ac22b12-b0ef-4ff2-bf77-a0ffef4fb6d4",
+        "outputId": "028954af-d2d0-4138-f436-ba3f1303201a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy: 0.7794361525704809\n",
-            "Precision: 0.7381703470031545\n",
-            "Recall: 0.823943661971831\n",
-            "F1-Score: 0.7787021630615641\n"
+            "Accuracy: 0.8009950248756219\n",
+            "Precision: 0.7628205128205128\n",
+            "Recall: 0.8380281690140845\n",
+            "F1-Score: 0.7986577181208054\n"
           ]
         }
       ]
@@ -1781,21 +1781,21 @@
       ],
       "metadata": {
         "id": "EIWfkL9bRlTT",
-        "outputId": "0e1debf6-2389-4cac-c705-917e1fdbeb17",
+        "outputId": "b5e56493-1bdf-43d7-c0f9-e0fad0f77ef1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 41,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy: 0.7678275290215588\n",
-            "Precision: 0.7535211267605634\n",
-            "Recall: 0.7535211267605634\n",
-            "F1-Score: 0.7535211267605635\n"
+            "Accuracy: 0.7545605306799337\n",
+            "Precision: 0.7556390977443609\n",
+            "Recall: 0.7077464788732394\n",
+            "F1-Score: 0.730909090909091\n"
           ]
         }
       ]
@@ -1835,21 +1835,21 @@
       ],
       "metadata": {
         "id": "lV_S3dztdqS4",
-        "outputId": "0451529f-96bb-44eb-872b-b238b833ccfd",
+        "outputId": "4a5a6b1b-20b6-45ba-e48b-0110f20a2232",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 45,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy: 0.7744610281923715\n",
-            "Precision: 0.7228915662650602\n",
-            "Recall: 0.8450704225352113\n",
-            "F1-Score: 0.7792207792207793\n"
+            "Accuracy: 0.814262023217247\n",
+            "Precision: 0.7621951219512195\n",
+            "Recall: 0.8802816901408451\n",
+            "F1-Score: 0.8169934640522877\n"
           ]
         }
       ]
@@ -1862,7 +1862,7 @@
       "metadata": {
         "id": "BA4jBZHwU5Kw"
       },
-      "execution_count": null,
+      "execution_count": 49,
       "outputs": []
     }
   ],
