--- a/final_project.ipynb
+++ b/final_project.ipynb
@@ -669,6 +669,7 @@
         }
       ],
       "source": [
+        "# reading in the data\n",
         "df = pd.read_csv('CardiacPrediction.csv')\n",
         "df"
       ]
@@ -685,7 +686,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Removes unimportant variables as shown in Research Paper 2\n",
+        "# Removes unimportant variables as shown in Research Paper 2\n",
         "df.drop(['SEQN','Annual-Family-Income','Height','Ratio-Family-Income-Poverty','X60-sec-pulse',\n",
         "          'Health-Insurance','Lymphocyte','Monocyte','Eosinophils','Total-Cholesterol','Mean-Cell-Vol','Mean-Cell-Hgb-Conc.','Hematocrit','Segmented-Neutrophils'], axis = 1, inplace=True)"
       ],
@@ -698,7 +699,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#All Columns in the dataset\n",
+        "# All Columns in the dataset\n",
         "df.columns"
       ],
       "metadata": {
@@ -759,7 +760,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#importing packages for vizualizations\n",
+        "# importing packages for vizualizations\n",
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
@@ -852,11 +853,11 @@
     {
       "cell_type": "code",
       "source": [
-        "#find correlation matrix\n",
+        "# find correlation matrix\n",
         "corr_mat=df.corr()\n",
-        "#Select variables have more than 0.09 or less than -0.09 correlation with the target variable(CoronaryHeartDisease)\n",
+        "# Select variables have more than 0.09 or less than -0.09 correlation with the target variable(CoronaryHeartDisease)\n",
         "chosen_variable=corr_mat[abs(corr_mat[\"CoronaryHeartDisease\"])>0.09].index\n",
-        "#plot the heatmap\n",
+        "# plot the heatmap\n",
         "plt.figure(figsize=(12,12))\n",
         "ax = sns.heatmap(df[chosen_variable].corr(),annot=True,cmap='RdBu')"
       ],
@@ -885,7 +886,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Analysing the target variable\n",
+        "# Analysing the target variable\n",
         "y = df[\"CoronaryHeartDisease\"]\n",
         "\n",
         "sns.countplot(y)\n",
@@ -970,7 +971,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#number of men and women\n",
+        "# number of men and women\n",
         "GenderIs1 = (df['Gender'] == 1).sum()\n",
         "GenderIs2 = (df['Gender'] == 0).sum()\n",
         "print(f'People with gender == 1: {heartDiseaseCount} \\nPeople with gender == 2: {noHeartDiseaseCount}')"
@@ -1139,7 +1140,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#exploring the density of the Glycohemoglobin feature\n",
+        "# exploring the density of the Glycohemoglobin feature\n",
         "sns.distplot(df['Glycohemoglobin'])"
       ],
       "metadata": {
@@ -1287,9 +1288,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# split into training and testing\n",
+        "# split into training and temp\n",
         "X_train, X_temp, y_train, y_temp = train_test_split(X_resampled, y_resampled, test_size=0.3, random_state=42)\n",
-        "\n",
+        "# split into testing and validation\n",
         "X_test, X_valid, y_test, y_valid = train_test_split(X_temp, y_temp, test_size=0.5, random_state=42)\n",
         "\n",
         "print(\"Training set shapes:\", X_train.shape, y_train.shape)\n",
@@ -1319,7 +1320,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Feature Standardization\n",
+        "# Standardization\n",
         "scaler = StandardScaler()\n",
         "X_train = scaler.fit_transform(X_train)\n",
         "X_test = scaler.transform(X_test)\n",
@@ -1344,7 +1345,7 @@
         "# finding the predicted probability\n",
         "y_pred_proba = lasso_cv.predict(X_test)\n",
         "# converting to binary predictions\n",
-        "y_pred = (y_pred_proba > 0.5).astype(int)   # might need to lower threshold\n",
+        "y_pred = (y_pred_proba > 0.5).astype(int)\n",
         "accuracy = accuracy_score(y_test, y_pred)\n",
         "print(\"Accuracy:\", accuracy)"
       ],
@@ -1370,7 +1371,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Feature selection in Lasso\n",
+        "# selecting the features selected by LASSO\n",
         "col_names = list(X.columns)\n",
         "selected_features = [col_names[i] for i in range(len(col_names)) if lasso_cv.coef_[i] != 0]\n",
         "\n",
@@ -1426,8 +1427,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# dataframe with features selected\n",
         "df_reduced = df[[\"CoronaryHeartDisease\"] + selected_features]\n",
-        "\n",
         "df_reduced"
       ],
       "metadata": {
@@ -2025,9 +2026,9 @@
         "rus = RandomUnderSampler(random_state=42)\n",
         "X_resampled, y_resampled = rus.fit_resample(X, y)\n",
         "\n",
-        "# split into training and testing\n",
+        "# split into training and temp\n",
         "X_train, X_temp, y_train, y_temp = train_test_split(X_resampled, y_resampled, test_size=0.3, random_state=42)\n",
-        "\n",
+        "# split into testing and validation\n",
         "X_test, X_valid, y_test, y_valid = train_test_split(X_temp, y_temp, test_size=0.5, random_state=42)\n",
         "\n",
         "print(\"Training set shapes:\", X_train.shape, y_train.shape)\n",
@@ -2057,7 +2058,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Feature Standardization\n",
+        "# Standardization\n",
         "scaler = StandardScaler()\n",
         "X_train = scaler.fit_transform(X_train)\n",
         "X_test = scaler.transform(X_test)\n",
@@ -2072,6 +2073,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# creating the empty metric lists\n",
         "accuracy_list = []\n",
         "precision_list = []\n",
         "recall_list = []\n",
@@ -2095,10 +2097,11 @@
     {
       "cell_type": "code",
       "source": [
+        "# creating the model object\n",
         "lr = LogisticRegression(random_state=42)\n",
-        "\n",
+        "# fitting on the training data\n",
         "lr.fit(X_train, y_train)\n",
-        "\n",
+        "# predicting on the test set\n",
         "y_pred = lr.predict(X_test)\n",
         "\n",
         "\n",
@@ -2140,6 +2143,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# predicting on the validation set\n",
         "y_pred = lr.predict(X_valid)\n",
         "\n",
         "accuracy = accuracy_score(y_valid, y_pred)\n",
@@ -2175,6 +2179,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# appending metrics to the metric lists\n",
         "accuracy_list.append(accuracy)\n",
         "precision_list.append(precision)\n",
         "recall_list.append(recall)\n",
@@ -2716,7 +2721,8 @@
         "# create a table/chart with the metrics of all the models and figure out which performs the best\n",
         "data = [accuracy_list, precision_list, recall_list, f1_list]\n",
         "\n",
-        "df_metrics = pd.DataFrame(data=data, columns=['Logistic Regression', 'Naive Bayes', 'SVM', 'K-Nearest Neighbors', 'Random Forest', 'XGBoost'],\n",
+        "df_metrics = pd.DataFrame(data=data, columns=['Logistic Regression', 'Naive Bayes',\n",
+        "                          'SVM', 'K-Nearest Neighbors', 'Random Forest', 'XGBoost'],\n",
         "                          index=['Accuracy', 'Precision', 'Recall', 'F1-Score'])\n",
         "df_metrics"
       ],
@@ -3073,6 +3079,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# constructing the neural net architecture\n",
         "class NeuralNetwork(nn.Module):\n",
         "    def __init__(self, input_size, output_size):\n",
         "        super(NeuralNetwork, self).__init__()\n",
@@ -3095,6 +3102,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# converting training, testing, and validation into tensors\n",
         "X_train_tensor = torch.tensor(X_train, dtype=torch.float32)\n",
         "y_train_tensor = torch.tensor(y_train.values, dtype=torch.float32)\n",
         "X_test_tensor = torch.tensor(X_test, dtype=torch.float32)\n",
@@ -3111,12 +3119,15 @@
     {
       "cell_type": "code",
       "source": [
+        "# defining important variables\n",
         "input_size = X.shape[1]\n",
         "output_size = 1\n",
         "learning_rate = 0.001\n",
         "\n",
+        "# creating neural net object\n",
         "nnet = NeuralNetwork(input_size, output_size)\n",
         "\n",
+        "# setting loss function and optimizer\n",
         "loss_fn = nn.BCEWithLogitsLoss()\n",
         "optimizer = optim.Adam(params=nnet.parameters(), lr=learning_rate)"
       ],
@@ -3130,9 +3141,9 @@
       "cell_type": "code",
       "source": [
         "epochs = 150\n",
-        "\n",
+        "# training loop\n",
         "for epoch in range(epochs):\n",
-        "    ### Training\n",
+        "    # Training\n",
         "    nnet.train()\n",
         "\n",
         "    y_logits = nnet(X_train_tensor).squeeze()\n",
@@ -3140,13 +3151,13 @@
         "\n",
         "    loss = loss_fn(y_logits, y_train_tensor)\n",
         "\n",
-        "    # 3. Optimizer zero grad\n",
+        "    # optimizer zero grad\n",
         "    optimizer.zero_grad()\n",
         "\n",
-        "    # 4. Loss backwards\n",
+        "    # loss backwards\n",
         "    loss.backward()\n",
         "\n",
-        "    # 5. Optimizer step\n",
+        "    # optimizer step\n",
         "    optimizer.step()"
       ],
       "metadata": {
@@ -3165,6 +3176,7 @@
         "    test_pred = torch.round(torch.sigmoid(test_logits))\n",
         "    # calculate loss/accuracy\n",
         "    test_loss = loss_fn(test_logits, y_test_tensor)\n",
+        "\n",
         "\n",
         "predictions_np = test_pred.numpy()\n",
         "y_test_np = y_test_tensor.numpy()\n",
